tests/valid/assign/assign_through_immut_bound_mut_ref.facet
fn f(mut x: unrestricted isize) -> unrestricted () {
    let r: affine &mut unrestricted isize = (&mut x) in
    (*r = 42)
}
