tests/invalid/reborrow/assign_while_mut_reborrowed.facet
fn f(mut x: unrestricted isize) -> unrestricted () {
    let mut r: affine &mut unrestricted isize = (&mut x) in
    let mut _r2: affine &mut unrestricted isize = (&mut *r) in
    let _: unrestricted () = (*r = 42) in
    ()
}
